--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ClassRoutine" />
+        <activity android:name=".BusRoutineActivity" />
+        <activity android:name=".ExamRoutineActivity"></activity>
     </application>
 
 </manifest>
