--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,14 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ClassRoutine" />
+
+        <activity android:name=".ClassRoutineTab.ClassRoutine" >
+        </activity>
         <activity android:name=".BusRoutineActivity" />
-        <activity android:name=".ExamRoutineActivity"></activity>
+        <activity android:name=".ExamRoutineActivity" />
     </application>
 
 </manifest>
